added get job data by ID
